--- a/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ImageCropResizeDialog.axaml
@@ -52,17 +52,17 @@
                     <HeaderedContentControl Header="{x:Static assets:Strings.Scale_Image}"
                                    Width="200" Padding="5">
                         <StackPanel Orientation="Vertical" Spacing="5" Margin="5">
-                            <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center" HorizontalAlignment="Right">
-                                <TextBlock Text="{x:Static assets:Strings.Size_}"/>
-                                <StackPanel Orientation="Vertical">
-                                    <!-- <NumericUpDown Name="WidthStepper" Value="{Binding #PreviewCanvas.PreviewWidth}" /> -->
-                                    <!-- <NumericUpDown Name="HeightStepper" Value="{Binding #PreviewCanvas.PreviewHeight}" /> -->
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
-                                <TextBlock Text="{x:Static assets:Strings.Preserve_Aspect_Ratio_}"/>
-                                <CheckBox IsChecked="{Binding PreserveAspectRatio}"/>
-                            </StackPanel>
+                            <!-- <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center" HorizontalAlignment="Right"> -->
+                            <!--     <TextBlock Text="{x:Static assets:Strings.Size_}"/> -->
+                            <!--     <StackPanel Orientation="Vertical"> -->
+                            <!--         <NumericUpDown Name="WidthStepper" Value="{Binding #PreviewCanvas.PreviewWidth}" /> -->
+                            <!--         <NumericUpDown Name="HeightStepper" Value="{Binding #PreviewCanvas.PreviewHeight}" /> -->
+                            <!--     </StackPanel> -->
+                            <!-- </StackPanel> -->
+                            <!-- <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center"> -->
+                            <!--     <TextBlock Text="{x:Static assets:Strings.Preserve_Aspect_Ratio_}"/> -->
+                            <!--     <CheckBox IsChecked="{Binding PreserveAspectRatio}"/> -->
+                            <!-- </StackPanel> -->
                             <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
                                 <TextBlock Text="{x:Static assets:Strings.Scale_to_Fit_}"/>
                                 <Button Content="{x:Static assets:Strings.Apply}" Command="{Binding ScaleToFitCommand}"
