--- a/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ProjectCreationDialog.axaml
@@ -23,11 +23,11 @@
             <HeaderedContentControl Header="{x:Static assets:Strings.Project_Options}" MinWidth="300" MinHeight="100">
                 <StackPanel Spacing="10" VerticalAlignment="Center" Orientation="Vertical">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10" IsVisible="{Binding !Migrate}">
-                        <TextBlock Text="{x:Static assets:Strings.Name}"/>
+                        <TextBlock Text="{x:Static assets:Strings.Name}" VerticalAlignment="Center"/>
                         <TextBox Name="NameBox" Watermark="Haroohie" Width="150" Text="{Binding ProjectName}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10">
-                        <TextBlock Text="{x:Static assets:Strings.Language_Template}"/>
+                        <TextBlock Text="{x:Static assets:Strings.Language_Template}" VerticalAlignment="Center"/>
                         <ComboBox SelectedItem="{Binding LanguageTemplateItem, Mode=OneWayToSource}" SelectedIndex="0"
                                   Name="LanguageComboBox">
                             <ComboBox.Items>
@@ -50,10 +50,10 @@
                 <StackPanel Orientation="Horizontal" Spacing="10" VerticalAlignment="Center">
                     <Button Content="{x:Static assets:Strings.Open_ROM}" Command="{Binding PickRomCommand}"
                             Name="OpenRomButton"/>
-                    <TextBlock Text="{Binding RomPath}"/>
+                    <TextBlock Text="{Binding RomPath}" VerticalAlignment="Center"/>
                 </StackPanel>
             </HeaderedContentControl>
-            <StackPanel Orientation="Horizontal" Margin="5" Spacing="10">
+            <StackPanel Orientation="Horizontal" Margin="5" Spacing="10" HorizontalAlignment="Right">
                 <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" CommandParameter="{Binding #PcDialog}"
                         Name="CancelButton" IsCancel="True"/>
                 <Button Content="{Binding ButtonText}" Command="{Binding CreateCommand}" CommandParameter="{Binding #PcDialog}"
