--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -19,13 +19,6 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel IsVisible="False">
-            <Button Command="{Binding CutCommand}" HotKey="{Binding CutHotKey}"/>
-            <Button Command="{Binding CopyCommand}" HotKey="{Binding CopyHotKey}"/>
-            <Button Command="{Binding PasteCommand}" HotKey="{Binding PasteHotKey}"/>
-            <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" HotKey="{Binding DeleteHotKey}"/>
-        </StackPanel>
-
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Left" Orientation="Horizontal">
             <Button Command="{Binding AddScriptCommandCommand}" HotKey="{Binding AddCommandHotKey}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
@@ -42,7 +35,8 @@
         </StackPanel>
         <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"
                       ShowColumnHeaders="False" CanUserResizeColumns="False" Name="CommandTree"
-                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop">
+                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"
+                      KeyDown="CommandTree_OnKeyDown">
         </TreeDataGrid>
 
         <GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Background="{StaticResource GroupLineColor}" ResizeDirection="Columns"/>
