--- a/src/SerialLoops/Views/Dialogs/AddScriptCommandDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AddScriptCommandDialog.axaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
         xmlns:controls="using:SerialLoops.Controls"
+        xmlns:utility="using:SerialLoops.Utility"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        Width="200" Height="150"
+        SizeToContent="Width" Height="150"
         TransparencyLevelHint="AcrylicBlur"
         Background="{DynamicResource FallbackBackgroundColor}"
         ExtendClientAreaToDecorationsHint="True"
@@ -21,8 +22,12 @@
         <StackPanel Orientation="Vertical" Spacing="20" Margin="15">
             <StackPanel Orientation="Vertical" Spacing="3">
                 <TextBlock Text="{x:Static assets:Strings.Select_Command_Type}"/>
-                <ComboBox ItemsSource="{Binding CommandVerbs}" SelectedItem="{Binding SelectedCommandVerb}"
-                          IsDropDownOpen="True" Name="CommandBox"/>
+                <StackPanel Orientation="Horizontal" Spacing="3">
+                    <ComboBox ItemsSource="{Binding CommandVerbs}" SelectedItem="{Binding SelectedCommandVerb}"
+                              IsDropDownOpen="True" Name="CommandBox"/>
+                    <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                         ToolTip.Tip="{Binding SelectedCommandVerb, Converter={x:Static utility:SLConverters.ScriptVerbStringHelpConverter}}"/>
+                </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Spacing="5">
                 <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}"
