--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/DialogueScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/DialogueScriptCommandEditorView.axaml
@@ -23,42 +23,50 @@
             <controls:ItemLink Tabs="{Binding Tabs}" Item="{Binding CharacterSprite}"/>
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static assets:Strings.Sprite_Entrance_Transition}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static assets:Strings.Sprite_Entrance_Transition}" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding SpriteEntranceTransitions}" Margin="10,5,0,0"
                   SelectedItem="{Binding SpriteEntranceTransition}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static assets:Strings.Sprite_Exit_Move_Transition}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static assets:Strings.Sprite_Exit_Move_Transition}" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="1" Grid.Row="3" ItemsSource="{Binding SpriteExitTransitions}" Margin="10,5,0,0"
                   SelectedItem="{Binding SpriteExitTransition}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Text="{x:Static assets:Strings.Sprite_Shake}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="4" Text="{x:Static assets:Strings.Sprite_Shake}" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding SpriteShakeEffects}" Margin="10,5,0,0"
                   SelectedItem="{Binding SpriteShakeEffect}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Text="{x:Static assets:Strings.Voice_Line}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="5" Text="{x:Static assets:Strings.Voice_Line}" VerticalAlignment="Center"/>
         <StackPanel Grid.Column="1" Grid.Row="5" Margin="10,5,0,0" Orientation="Horizontal" VerticalAlignment="Center"
                     Spacing="10">
             <ComboBox ItemsSource="{Binding VoicedLines}" SelectedItem="{Binding VoicedLine}"/>
             <controls:ItemLink Tabs="{Binding Tabs}" Item="{Binding VoicedLine}"/>
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="6" Text="{x:Static assets:Strings.Text_Voice_Font}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="6" Text="{x:Static assets:Strings.Text_Voice_Font}" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="1" Grid.Row="6" ItemsSource="{Binding Characters}" SelectedItem="{Binding TextVoiceFont}" Margin="10,5,0,0"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="7" Text="{x:Static assets:Strings.Text_Speed}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="7" Text="{x:Static assets:Strings.Text_Speed}" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="1" Grid.Row="7" ItemsSource="{Binding Characters}" SelectedItem="{Binding TextSpeed}" Margin="10,5,0,0"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="8" Text="{x:Static assets:Strings.Text_Entrance_Effect}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="8" Text="{x:Static assets:Strings.Text_Entrance_Effect}" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="1" Grid.Row="8" ItemsSource="{Binding TextEntranceEffects}" SelectedItem="{Binding TextEntranceEffect}" Margin="10,5,0,0"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="9" Text="{x:Static assets:Strings.Sprite_Layer}" Margin="0,12,0,0"/>
+        <StackPanel Grid.Column="0" Grid.Row="9" Orientation="Horizontal" Spacing="3">
+            <TextBlock Text="{x:Static assets:Strings.Sprite_Layer}" VerticalAlignment="Center"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.ScriptCommandParameterHelpSpriteLayer}"/>
+        </StackPanel>
         <NumericUpDown Grid.Column="1" Grid.Row="9" Minimum="{Binding MinShort}" Maximum="{Binding MaxShort}" Value="{Binding SpriteLayer}"
                        Margin="10,5,0,0" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="10" Text="{x:Static assets:Strings.Don_t_Clear_Text}" Margin="0,12,0,0"/>
+        <StackPanel Grid.Column="0" Grid.Row="10">
+            <TextBlock Text="{x:Static assets:Strings.Don_t_Clear_Text}" VerticalAlignment="Center"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.ScriptCommandParameterHelpDontClearText}"/>
+        </StackPanel>
         <CheckBox Grid.Column="1" Grid.Row="10" Margin="10,5,0,0" IsChecked="{Binding DontClearText}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="11" Text="{x:Static assets:Strings.Disable_Lip_Flap}" Margin="0,12,0,0"/>
+        <TextBlock Grid.Column="0" Grid.Row="11" Text="{x:Static assets:Strings.Disable_Lip_Flap}" VerticalAlignment="Center"/>
         <CheckBox Grid.Column="1" Grid.Row="11" Margin="10,5,0,0" IsChecked="{Binding DisableLipFlap}" />
     </Grid>
 </UserControl>
